--- a/client/package.json
+++ b/client/package.json
@@ -9,26 +9,25 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@types/react": "^18.2.43",
+    "@types/react-dom": "^18.2.17",
+    "@vitejs/plugin-react": "^4.2.1",
     "@vitalets/google-translate-api": "^9.2.1",
+    "autoprefixer": "^10.4.16",
     "axios": "^1.6.2",
     "i18next": "^25.6.3",
     "i18next-browser-languagedetector": "^8.2.0",
     "lucide-react": "^0.294.0",
+    "postcss": "^8.4.32",
     "qrcode.react": "^3.2.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-i18next": "^16.3.5",
     "react-router-dom": "^6.20.0",
     "recharts": "^3.6.0",
-    "socket.io-client": "^4.5.4"
-  },
-  "devDependencies": {
-    "@types/react": "^18.2.43",
-    "@types/react-dom": "^18.2.17",
-    "@vitejs/plugin-react": "^4.2.1",
-    "autoprefixer": "^10.4.16",
-    "postcss": "^8.4.32",
+    "socket.io-client": "^4.5.4",
     "tailwindcss": "^3.3.6",
     "vite": "^5.0.8"
-  }
+  },
+  "devDependencies": {}
 }
