--- a/server/.env.example
+++ b/server/.env.example
@@ -1,3 +1,4 @@
 PORT=5000
 JWT_SECRET=your_jwt_secret_key_here
 NODE_ENV=development
+DATABASE_URL=postgresql://neondb_owner:npg_0HWkqo9CysVg@ep-billowing-base-a4e5hyfo-pooler.us-east-1.aws.neon.tech/neondb?sslmode=require&channel_binding=require
