--- a/server/package.json
+++ b/server/package.json
@@ -6,7 +6,9 @@
     "dev": "node server.js",
     "start": "node server.js",
     "seed": "node seed.js",
-    "migrate": "node migrate-data.js"
+    "migrate": "node migrate-data.js",
+    "create-test": "node create-test-restaurant.js",
+    "check-db": "node check-db-status.js"
   },
   "dependencies": {
     "express": "^4.18.2",
