--- a/client/package.json
+++ b/client/package.json
@@ -11,8 +11,8 @@
   "dependencies": {
     "@types/react": "^18.2.43",
     "@types/react-dom": "^18.2.17",
-    "@vitejs/plugin-react": "^4.2.1",
     "@vitalets/google-translate-api": "^9.2.1",
+    "@vitejs/plugin-react": "^4.2.1",
     "autoprefixer": "^10.4.16",
     "axios": "^1.6.2",
     "i18next": "^25.6.3",
@@ -22,12 +22,12 @@
     "qrcode.react": "^3.2.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-helmet-async": "^2.0.5",
     "react-i18next": "^16.3.5",
     "react-router-dom": "^6.20.0",
     "recharts": "^3.6.0",
     "socket.io-client": "^4.5.4",
     "tailwindcss": "^3.3.6",
     "vite": "^5.0.8"
-  },
-  "devDependencies": {}
+  }
 }
