feat: Complete WaitNot Restaurant Desktop App with Professional Installer
🖥️ Desktop Application Features:
- Professional Windows EXE installer with NSIS
- Native desktop experience with Electron
- Auto-updates and offline indicators
- Enhanced printing support for receipts
- Desktop shortcuts and Start Menu integration
- Professional installation wizard with EULA

📱 Restaurant Dashboard Enhancements:
- Install Desktop App button with dual options
- Professional EXE download via WhatsApp support
- Quick batch launcher for developers
- Analytics tracking for desktop app usage
- Enhanced user experience with clear options

🔧 Technical Implementation:
- Electron-based desktop application
- Professional NSIS installer configuration
- Network connectivity to production server
- Secure HTTPS connection to waitnot-restaurant.onrender.com
- Context isolation and security best practices
- Auto-launch option after installation

📦 Distribution Ready:
- WaitNot Restaurant Setup 1.0.0.exe (Professional installer)
- Portable versions for 32-bit and 64-bit Windows
- Complete installation wizard with license agreement
- Desktop shortcut creation and Start Menu integration
- Professional uninstaller with clean removal

🌐 Network Configuration:
- Production server: https://waitnot-restaurant.onrender.com
- Development server: http://localhost:3000
- Real-time data sync with cloud server
- Secure token-based authentication
- Analytics integration with Google Analytics

🎯 Business Benefits:
- Professional desktop experience for restaurants
- Enhanced brand image with native Windows app
- Faster order processing with desktop optimization
- Better printing support for kitchen and receipts
- Reduced technical barriers for restaurant staff
- Professional installation process builds trust

📊 Analytics & Tracking:
- Desktop app installation tracking
- Professional vs batch launcher usage
- WhatsApp support contact tracking
- Feature usage analytics in desktop mode
- Error tracking and perfor

--- a/restaurant-app/package.json
+++ b/restaurant-app/package.json
@@ -41,6 +41,8 @@
       "preload.js",
       "renderer/**/*",
       "assets/**/*",
+      "sounds/**/*",
+      "logo.png",
       "node_modules/**/*"
     ],
     "extraMetadata": {
@@ -56,13 +58,15 @@
           ]
         }
       ],
+      "icon": "logo.png",
       "requestedExecutionLevel": "asInvoker",
       "publisherName": "WaitNot Team",
       "verifyUpdateCodeSignature": false
     },
     "mac": {
       "target": "dmg",
-      "category": "public.app-category.business"
+      "category": "public.app-category.business",
+      "icon": "logo.png"
     },
     "linux": {
       "target": [
@@ -73,7 +77,8 @@
           ]
         }
       ],
-      "category": "Office"
+      "category": "Office",
+      "icon": "logo.png"
     },
     "nsis": {
       "oneClick": false,
@@ -90,6 +95,9 @@
       "artifactName": "${productName} Setup ${version}.${ext}",
       "uninstallDisplayName": "${productName}",
       "license": "build/license.txt"
+    },
+    "extraMetadata": {
+      "main": "main.js"
     }
   }
 }
