🔧 Fix desktop app production server connection
- Fix Vite proxy to only work in development mode
- Force production server URL for desktop app in axios config
- Add enhanced logging for API requests/responses
- Remove dev tools from production desktop app
- Update build script with notification sound support
- Ensure all API calls go to https://waitnot-restaurant.onrender.com

This fixes the issue where desktop app was connecting to localhost
instead of the production server.

--- a/restaurant-app/package.json
+++ b/restaurant-app/package.json
@@ -39,6 +39,7 @@
     "files": [
       "main.js",
       "preload.js",
+      "fallback.html",
       "renderer/**/*",
       "assets/**/*",
       "sounds/**/*",
