--- a/client/package.json
+++ b/client/package.json
@@ -15,6 +15,7 @@
     "@vitejs/plugin-react": "^4.2.1",
     "autoprefixer": "^10.4.16",
     "axios": "^1.6.2",
+    "es6-promise": "^4.2.8",
     "i18next": "^25.6.3",
     "i18next-browser-languagedetector": "^8.2.0",
     "lucide-react": "^0.294.0",
@@ -28,6 +29,7 @@
     "recharts": "^3.6.0",
     "socket.io-client": "^4.5.4",
     "tailwindcss": "^3.3.6",
-    "vite": "^5.0.8"
+    "vite": "^5.0.8",
+    "whatwg-fetch": "^3.6.20"
   }
 }
