--- a/server/package.json
+++ b/server/package.json
@@ -11,6 +11,7 @@
     "check-db": "node check-db-status.js"
   },
   "dependencies": {
+    "axios": "^1.13.4",
     "bcryptjs": "^2.4.3",
     "cors": "^2.8.5",
     "dotenv": "^16.3.1",
