Fix: Remove extra closing brace in RestaurantDashboard.jsx and add terser dependency

--- a/client/package.json
+++ b/client/package.json
@@ -31,5 +31,8 @@
     "tailwindcss": "^3.3.6",
     "vite": "^5.0.8",
     "whatwg-fetch": "^3.6.20"
+  },
+  "devDependencies": {
+    "terser": "^5.46.0"
   }
 }
